--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "awesome-store-be",
+  "name": "meteor-task-be",
   "version": "1.0.0",
-  "description": "Back-end part of awesome-store app",
+  "description": "Back-end part of meteor-task app",
   "main": "index.js",
   "scripts": {
     "server": "nodemon index.js",
@@ -19,17 +19,17 @@
   },
   "homepage": "https://github.com/awesome-store/back-end#readme",
   "dependencies": {
-    "bcrypt": "^4.0.1",
+    "bcrypt": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.22.0",
+    "helmet": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.1.0"
+    "pg": "^8.4.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.6"
   }
 }
